all function done

--- a/app-notification.html
+++ b/app-notification.html
@@ -204,7 +204,7 @@
 <!-- notify-list-wrap Begin -->
 <script id="notify-list-item-schedule-tmpl" type="text/x-jquery-tmpl">
     <li id="notify_${id}" class="notifyEdit">
-        <time class="notify-time">${cms.common.formatTimestamp(updateDate)}</time> 
+        <time class="notify-time">${cms.common.formatTimestamp(scheduleDate)}</time> 
         <span class="notify-content">${message}</span>
         <div class="func-btns">                                                        
             <ul>
@@ -219,7 +219,7 @@
 <!-- notify-list-wrap Begin -->
 <script id="notify-list-item-history-tmpl" type="text/x-jquery-tmpl">
     <li id="notify_${id}">
-        <time class="notify-time">${cms.common.formatTimestamp(updateDate)}</time> 
+        <time class="notify-time">${cms.common.formatTimestamp(publishDate)}</time> 
         <span class="notify-content">${message}</span>
     </li>
 </script>
@@ -284,40 +284,49 @@
                     
                     <input type="radio" class="f-schedule-type" autocomplete="off" id="scheduleun-app2" name="scheduleun-app" value="Scheduled">
                     <label for="scheduleun-app2" class="radio-btn">${nn._([cms.global.PAGE_ID, 'notification', 'Scheduled'])}</label>
-                    <br>
+
+
                     <div class="form-data f-schedule-date hide">
 
+                        <div class="datepicker"></div>
 
-                <div class="datepicker"></div>
+                        <div class="fTimeSelect">
+                            <h3>Hour:</h3>
+                            <select id="schedule-hour">
+                                <option value="00">00</option>
+                                <option value="01">01</option>
+                                <option value="02">02</option>
+                                <option value="03">03</option>
+                                <option value="04">04</option>
+                                <option value="05">05</option>
+                                <option value="06">06</option>
+                                <option value="07">07</option>
+                                <option value="08">08</option>
+                                <option value="09">09</option>
+                                <option value="10">10</option>
+                                <option value="11">11</option>
+                                <option value="12">12</option>
+                                <option value="13">13</option>
+                                <option value="14">14</option>
+                                <option value="15">15</option>
+                                <option value="16">16</option>
+                                <option value="17">17</option>
+                                <option value="18">18</option>
+                                <option value="19">19</option>
+                                <option value="20">20</option>
+                                <option value="21">21</option>
+                                <option value="22">22</option>
+                                <option value="23">23</option>
+                            </select>
 
-<div>
-<h2>Hour:</h2>
-<select id="schedule-hour">
-<option value="00">00</option>
-<option value="01" disalbed="disalbed">11</option>
-<option value="12">112</option>
-<option value="13">113</option>
-<option value="14">114</option>
-<option value="15">115</option>
-<option value="16">116</option>
+                            <h3>Minute:</h3>
+                            <select id="schedule-minute">
+                                <option value="00">00</option>
+                                <option value="30">30</option>
+                            </select>
+                        </div>
+                        <input id="scheduled" type="hidden" >
 
-</select>
-
-<h2>Minute:</h2>
-<select id="schedule-minute">
-<option value="">00</option>
-<option value="1" disalbed>11</option>
-<option value="12">112</option>
-<option value="13">113</option>
-<option value="14">114</option>
-<option value="15">115</option>
-<option value="16">116</option>
-
-</select>
-</div>
-                        <input id="basicExample" type="date" >
-
-                        <input id="ssdate" type="date" >
                     </div>
 
                                                                    
