--- a/app-notification.html
+++ b/app-notification.html
@@ -203,7 +203,7 @@
 
 <!-- notify-list-wrap Begin -->
 <script id="notify-list-item-schedule-tmpl" type="text/x-jquery-tmpl">
-    <li id="notify_${id}" class="notifyEdit">
+    <li id="notify_${id}" class="notifyEdit" data-sdate="${scheduleDate}">
         <time class="notify-time">${cms.common.formatTimestamp(scheduleDate)}</time> 
         <span class="notify-content">${message}</span>
         <div class="func-btns">                                                        
