setting language in cms-setting

--- a/cms-settings.html
+++ b/cms-settings.html
@@ -247,6 +247,17 @@
             </div>
         </div>
     </div>
+    <div class="fminput clearfix">
+        <label>${nn._([cms.global.PAGE_ID, 'setting-form', 'Language'])}</label>
+        <div class="fmfield">
+            <p style="padding-top:8px" >
+                <select id="lang" name="lang">
+                    <option value="en">English</option>
+                    <option value="zh">中文</option>
+                </select>
+            </p>
+        </div>
+    </div>
     <div class="form-btn">
         <div class="form-btn-wrap">
             <p class="notice hide">${nn._([cms.global.PAGE_ID, 'setting-form', 'Please fill in all required fields.'])}</p>
