--- a/epcurate-curation.html
+++ b/epcurate-curation.html
@@ -91,8 +91,8 @@
                 <!-- <p class="auto-height"></p> -->
                 <ul class="tabs">
                     <li class="first last on"><span><a href="#cur-add" class="cur-add langkey">Add Video</a></span></li>
-                    <li class="edit-video last hide on"><span><a href="#cur-edit" class="cur-edit langkey">Edit</a></span></li>
-                    <li class="poi last hide" style="margin-left: -10000"><span><a href="#cur-poi" class="cur-poi langkey">POI & interactive event</a></span></li>
+                    <li class="edit-video hide on"><span><a href="#cur-edit" class="cur-edit langkey">Edit</a></span></li>
+                    <li class="poi last hide"><span><a href="#cur-poi" class="cur-poi langkey">POI & interactive event</a></span></li>
                     <li class="edit-poi on last hide"><span><a href="#cur-edit-poi" class="cur-edit-poi"><img src="images/icon_edit.png" alt="" width="16" height="16" /></a></span></li>
                 </ul>
                 <div id="cur-add" class="tab-content clearfix">
