hide Facebook connect fileld

--- a/cms-settings.html
+++ b/cms-settings.html
@@ -227,7 +227,7 @@
             <p class="btns btn-change-pwd{{if cms.global.USER_DATA.fbUser}} disable{{else}} enable{{/if}}"><span class="btn-right"><a href="#">${nn._([cms.global.PAGE_ID, 'setting-form', 'Change password'])}</a></span></p>
         </div>
     </div>
-    <div class="fminput clearfix">
+    <div class="fminput clearfix hide">
         <label>${nn._([cms.global.PAGE_ID, 'setting-form', 'Facebook'])}</label>
         <div class="fmfield">
             <div class="connect">
