--- a/pcs-v4.html
+++ b/pcs-v4.html
@@ -41,13 +41,13 @@
     <div class="cms-nav jumbotron studio-nav">
         <div class="container">
             <div class="row">
-                <div class="col-md-2">
+                <div class="col-md-3">
                     <a href="index.html">
                         <span class="cms-icon langkeyT">CMS</span>
                         <span class="sub-title ">Content Management System</span>
                     </a>
                 </div>
-                    <ul class="col-md-4 list-inline list-unstyled navbar-btn">
+                    <ul class="col-md-4 list-inline list-unstyled navbar-btn text-left">
                         <li>
                             <a href="index.html" class="btn btn-default langkeyT">My Programs</a>
                         </li>
@@ -71,8 +71,8 @@
                 <ul class="nav nav-sidebar func-nav" data-spy="affix" data-offset-top="80" data-offset-bottom="50">
                     <li><a href="#"><span class="icon-home"></span>  <sapn class="langkeyT">Main Channels</span></a></li>
                     <li><a href="#"><span class="icon-store"></span> <sapn class="langkeyT">Program Store</span></a></li>
-                    <li><a href="#"><span class="icon-cms"></span> <sapn class="langkeyT">Brand Settings</span></a></li>
-                    <li><a href="#"><span class="icon-warning"></span> <sapn class="langkeyT">Notification</span></a></li>
+                    <li><a href="#"><span class="icon-band"></span> <sapn class="langkeyT">Brand Settings</span></a></li>
+                    <li><a href="#"><span class="icon-notification"></span> <sapn class="langkeyT">Notification</span></a></li>
                 </ul>
             </div>
             <div class="col-md-9">
@@ -80,6 +80,7 @@
                     <li><a href="#">My App</a></li>
                     <li>Brand Management</li>
                 </ol>
+
 
                 <form class="form-horizontal" role="form">
 
@@ -98,7 +99,7 @@
                     <div class="form-group ">
                         <label class="col-sm-2 control-label">App Logo</label>
                         <div class="col-sm-10">
-                            <img class="img-thumbnail" src="http://fakeimg.pl/100" alt="">
+                            <img class="img-thumbnail app-thumbnail" src="http://fakeimg.pl/100" alt="">
                         </div>
                     </div>
                     <div class="form-group">
@@ -297,7 +298,32 @@
     	<div class="container">
     		<p class="navbar-text navbar-right">© 2014 FLIPr.tv. All rights reserved</p>
     	</div>
-    </footer> 
+    </footer>
+
+    <!-- Modal -->
+    <div class="modal fade langOverlay" id="sysProcessings" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" data-backdrop="static" data-target=".bs-example-modal-sm">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title langkeyT" >System Message</h4>
+                </div>
+                <div class="modal-body">
+                    <img alt="" src="images/icon_load_l.gif">
+                    <span class="langkeyT">Processing...</span>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade langOverlay " id="sysProcessing" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true" data-backdrop="static" data-keyboard="false">
+        <div class="modal-dialog modal-sm modal-center">
+            <div class="modal-content" style="padding:10px;">
+                <img alt="" src="images/icon_load_l.gif">
+                <span class="langkeyT">Processing...</span>
+            </div>
+        </div>
+    </div>
+
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
