--- a/app-brand.html
+++ b/app-brand.html
@@ -250,6 +250,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     <h4 class="modal-title langkeyT" >System Message</h4>
                 </div>
                 <div class="modal-body">
@@ -281,7 +282,8 @@
     <script src="javascripts/libs/jquery.cookie.min.js?v=411104"></script>
     <script src="javascripts/libs/json2.min.js?v=411104"></script>
     <script src="javascripts/libs/purl.min.js?v=411104"></script>
-    <script src="javascripts/libs/jquery.fileupload.js"></script>
+
+    <script src="javascripts/libs/swfupload/swfupload.js?v=411104"></script>
 
     <script src="javascripts/v4/config.js?v=411104"></script>
     <script src="javascripts/v4/func.common.js?v=411104"></script>
