--- a/portal-manage.html
+++ b/portal-manage.html
@@ -11,6 +11,7 @@
 <link rel="stylesheet" href="stylesheets/uniform.css?v=411104" />
 <link rel="stylesheet" href="stylesheets/episode.css?v=411104" />
 <link rel="stylesheet" href="stylesheets/portal.css?v=411104" />
+<link rel="stylesheet" href="stylesheets/old-portal-manage-add.css">
 <title>FLIPr.tv - Main Channels</title>
 </head>
 <body>
@@ -74,6 +75,40 @@
                 <li id="set-save" class="last"><p class="btns"><span><a href="javascript:void(0)" class="langkey">Save</a></span></p></li>
             </ul>
         </div>
+
+<!-- { key card upload -->
+        <div class="intro clearfix">
+            <p><span class="langkey">Upload channel banner images to make the channel more unique.</span></p>
+        </div>
+        <div class="clearfix">
+            <div class="banner-wrap">
+                <div class="thumb-wrap">
+                    <span class="thumb-inner-text">iOS image Upload Now!</span>
+                    <span class="thumb-inner-warning">The photo you uploaded is too small! It must be at least 1536 pixels wide and 570 pixels tall.</span>
+                    <div class="thumb-hover-wrap">
+                        <span>Upload image</span>
+                    </div>
+                </div>
+                <div class="banner-text">
+                    Recommended large channel art size: 1536 x 570
+                </div>
+            </div>
+            <div class="banner-wrap">
+                <div class="thumb-wrap">
+                    <span class="thumb-inner-text">Andriod image Upload Now!</span>
+                    <span class="thumb-inner-warning">The photo you uploaded is too small! It must be at least 800 pixels wide and 244 pixels tall.</span>
+                    <div class="thumb-hover-wrap">
+                        <span>Upload image</span>
+                    </div>
+                </div>
+                <div class="banner-text">
+                    Recommended large channel art size: 800 x 244
+                </div>
+
+            </div>
+        </div>
+<!-- key card upload }-->
+
         <div class="intro clearfix">
             <p>
                 <span class="langkey">Main channels are the first thing sighted by your audience, which offer the great opportunity for your fine programs to gain visibility and exposure.</span>
