--- a/portal-manage.html
+++ b/portal-manage.html
@@ -76,38 +76,7 @@
             </ul>
         </div>
 
-<!-- { key card upload -->
-        <div class="intro clearfix">
-            <p><span class="langkey">Upload channel banner images to make the channel more unique.</span></p>
-        </div>
-        <div class="clearfix">
-            <div class="banner-wrap">
-                <div class="thumb-wrap">
-                    <span class="thumb-inner-text">iOS image Upload Now!</span>
-                    <span class="thumb-inner-warning">The photo you uploaded is too small! It must be at least 1536 pixels wide and 570 pixels tall.</span>
-                    <div class="thumb-hover-wrap">
-                        <span>Upload image</span>
-                    </div>
-                </div>
-                <div class="banner-text">
-                    Recommended large channel art size: 1536 x 570
-                </div>
-            </div>
-            <div class="banner-wrap">
-                <div class="thumb-wrap">
-                    <span class="thumb-inner-text">Andriod image Upload Now!</span>
-                    <span class="thumb-inner-warning">The photo you uploaded is too small! It must be at least 800 pixels wide and 244 pixels tall.</span>
-                    <div class="thumb-hover-wrap">
-                        <span>Upload image</span>
-                    </div>
-                </div>
-                <div class="banner-text">
-                    Recommended large channel art size: 800 x 244
-                </div>
 
-            </div>
-        </div>
-<!-- key card upload }-->
 
         <div class="intro clearfix">
             <p>
@@ -139,10 +108,45 @@
                     <span class="form-content langkey">Sorted by: Updated time</span>
                 </div>
             </div>
+
             <h2 id="cntChannelEmpty" class="langkey hide">You can add 6 prmotion categories.</h2>
             <div id="store-category" onsubmit="return false;"></div>
             <h2 id="cntChannelEmpty" style="display:none" class="langkey">You can add 27 programs into your channel.</h2>
             <div id="portal-constrain">
+                <!-- { key card upload -->
+        <div class="key-card-wrap">
+        <div class="intro clearfix">
+            <p><span class="langkey">Upload channel banner images to make the channel more unique.</span></p>
+        </div>
+        <div class="clearfix">
+            <div class="banner-wrap">
+                <div class="thumb-wrap">
+                    <span class="thumb-inner-text">iOS image Upload Now!</span>
+                    <span class="thumb-inner-warning">The photo you uploaded is too small! It must be at least 1536 pixels wide and 570 pixels tall.</span>
+                    <div class="thumb-hover-wrap">
+                        <span>Upload image</span>
+                    </div>
+                </div>
+                <div class="banner-text">
+                    Recommended large channel art size: 1536 x 570
+                </div>
+            </div>
+            <div class="banner-wrap">
+                <div class="thumb-wrap">
+                    <span class="thumb-inner-text">Andriod image Upload Now!</span>
+                    <span class="thumb-inner-warning">The photo you uploaded is too small! It must be at least 800 pixels wide and 244 pixels tall.</span>
+                    <div class="thumb-hover-wrap">
+                        <span>Upload image</span>
+                    </div>
+                </div>
+                <div class="banner-text">
+                    Recommended large channel art size: 800 x 244
+                </div>
+
+            </div>
+        </div>
+        </div>
+<!-- key card upload }-->
                 <div id="store-list">
                     <ul id="channel-list" class="channel-list">
                     </ul>
