14. 若必填項目沒有填滿，按下 "Save"，則出現紅色警示"Please fill in all required fields." 15. 按下"Save& visit the page"以後會彈出錯誤視窗 "System Message"。（見附圖） 16. 左邊選單列"Brand Settings" 要改成 "Brand Management"

--- a/app-brand.html
+++ b/app-brand.html
@@ -68,7 +68,7 @@
                 <ul class="nav nav-sidebar func-nav" data-spy="affix" data-offset-top="80" data-offset-bottom="50">
                     <li><a href="portal-manage.html"><span class="icon-home"></span>  <sapn class="langkeyT">Main Channels</span></a></li>
                     <li><a href="store-promotion.html"><span class="icon-store"></span> <sapn class="langkeyT">Program Store</span></a></li>
-                    <li><a href="brand-setting.html"><span class="icon-band"></span> <sapn class="langkeyT">Brand Settings</span></a></li>
+                    <li><a href="brand-setting.html"><span class="icon-band"></span> <sapn class="langkeyT">Brand Management</span></a></li>
                     <li><a href="app-notification.html"><span class="icon-notification"></span> <sapn class="langkeyT">Notification</span></a></li>
                 </ul>
             </div>
