--- a/app-brand.html
+++ b/app-brand.html
@@ -93,28 +93,29 @@
                     <div class="form-group ">
                         <label class="col-sm-2 control-label langkeyT">App Logo</label>
                         <div class="col-sm-10">
-                            <img id="appLogo" class="img-thumbnail app-thumbnail" src="http://fakeimg.pl/100" alt="">
+                            <img id="appLogo" class="img-thumbnail app-thumbnail" src="http://fakeimg.pl/100">
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-2 control-label langkeyT">Detailed description</label>
+
+                        <label class="col-sm-2 control-label"><span class="glyphicon glyphicon-star text-danger"></span><span class="langkeyT">Detailed description</span></label>
                         <div class="col-sm-10">
-                            <textarea id="appIntro" class="col-sm-12 wordsCount"></textarea>
+                            <textarea id="appIntro" class="col-sm-12 wordsCount langkeyPH" placeholder="Latest and popular videos all in FLIPr app!"></textarea>
                              <span class="help-block text-right"><span class="words-amount">0</span> <span class="langkeyT">Best within 80 characters</span></span>
 
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-2 control-label langkeyT">Short descript</label>
+                        <label class="col-sm-2 control-label"><span class="glyphicon glyphicon-star text-danger"></span><span class="langkeyT">Short descript</span></label>
                         <div class="col-sm-10">
-                            <input id="appSortIntro" type="text" class="form-control wordsCount">
+                            <input id="appSortIntro" type="text" class="form-control wordsCount langkeyPH" placeholder="Latest and popular videos, updating EVERY DAY!">
                             <span class="help-block text-right"><span class="words-amount ">0</span> <span class="langkeyT">Best within 40 characters</span></span>
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-2 control-label langkeyT">call to action</label>
+                        <label class="col-sm-2 control-label"><span class="glyphicon glyphicon-star text-danger"></span><span class="langkeyT">call to action</span></label>
                         <div class="col-sm-10">
-                            <input id="appSlogan" type="text" class="form-control wordsCount">
+                            <input id="appSlogan" type="text" class="form-control wordsCount langkeyPH" placeholder="FREE to download now!">
                             <span class="help-block text-right "><span class="words-amount">0</span> <span class="langkeyT">Best within 15 characters</span></span>
                         </div>
                     </div>
