language string update

--- a/app-brand.html
+++ b/app-brand.html
@@ -196,7 +196,7 @@
                         placeholder="${nn._([cms.global.PAGE_ID, 'main-area', 'Input SNS link...'])}">
                     <div class="input-group-btn">
                         <a class="btn btn-default logoSNS"  data-toggle="popover" data-placement="top"  data-container="body" 
-                            data-content="${nn._([cms.global.PAGE_ID, 'main-area', 'Click icon button to upload your personal SNS icon! Better results with 50x50 image.'])}">
+                            data-content="${nn._([cms.global.PAGE_ID, 'main-area', 'Upload your personal SNS icon now! Better results with 50x50 image.'])}">
                             {{if '' != logoUrl}}
                                 <img class="logoUrl" src="${logoUrl}" width="30px" height="30px" >
                             {{else}}
